@@ -12,7 +12,7 @@ import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.CoreMatchers.sameInstance;
 import static org.junit.Assert.assertThat;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.csstudio.display.builder.model.macros.Macros;
 import org.csstudio.display.builder.runtime.app.DisplayInfo;
@@ -30,35 +30,49 @@ public class DisplayInfoTest
         DisplayInfo info = new DisplayInfo("/some/path/file.bob",  null, new Macros(), true);
         assertThat(info.getPath(), equalTo("/some/path/file.bob"));
         assertThat(info.getName(), equalTo("file.bob"));
+
+        info = new DisplayInfo("http://my.site/some/path/file.bob",  null, new Macros(), true);
+        assertThat(info.getPath(), equalTo("http://my.site/some/path/file.bob"));
+        assertThat(info.getName(), equalTo("file.bob"));
+
     }
 
     @Test
-    public void testURL2DisplayInfo() throws Exception
+    public void testURI2DisplayInfo() throws Exception
     {
         // Simple example
-        URL url = new URL("file:/some/path/xx.bob");
-        DisplayInfo info = DisplayInfo.forURL(url);
+        URI url = URI.create("file:/some/path/xx.bob");
+        DisplayInfo info = DisplayInfo.forURI(url);
         System.out.println(info);
 
         assertThat(info.getPath(), equalTo("/some/path/xx.bob"));
 
         // .. with macros
-        url = new URL("file:/some/path/xx.bob?X=Fred+Harvey%20Newman&Y=2");
-        info = DisplayInfo.forURL(url);
+        url = URI.create("file:/some/path/xx.bob?X=Fred+Harvey%20Newman&Y=2");
+        info = DisplayInfo.forURI(url);
         System.out.println(info);
 
         assertThat(info.getPath(), equalTo("/some/path/xx.bob"));
         assertThat(info.getMacros().getValue("X"), equalTo("Fred Harvey Newman"));
         assertThat(info.getMacros().getValue("Y"), equalTo("2"));
+
+        // Web URL
+        url = URI.create("http://my.site/some/path/xx.bob?X=Fred+Harvey%20Newman&Y=2");
+        info = DisplayInfo.forURI(url);
+        System.out.println(info);
+
+        assertThat(info.getPath(), equalTo("http://my.site/some/path/xx.bob"));
+        assertThat(info.getMacros().getValue("X"), equalTo("Fred Harvey Newman"));
+        assertThat(info.getMacros().getValue("Y"), equalTo("2"));
     }
 
     @Test
-    public void testDisplayInfo2URL() throws Exception
+    public void testDisplayInfo2URI() throws Exception
     {
         // Plain path
         final Macros macros = new Macros();
         DisplayInfo info = new DisplayInfo("/some/path/xx.bob", null, macros, false);
-        URL url = info.toURL();
+        URI url = info.toURI();
         System.out.println(url);
         assertThat(url.toString(), equalTo("file:/some/path/xx.bob"));
 
@@ -66,7 +80,7 @@ public class DisplayInfoTest
         macros.add("X", "Fred Harvey Newman");
         macros.add("Y", "2");
         info = new DisplayInfo("file:/some/path/xx.bob", null, macros, false);
-        url = info.toURL();
+        url = info.toURI();
         System.out.println(url);
 
         assertThat(url.toString(), equalTo("file:/some/path/xx.bob?X=Fred+Harvey+Newman&Y=2"));
@@ -75,21 +89,21 @@ public class DisplayInfoTest
     @Test
     public void testUniqueness() throws Exception
     {
-        // URLs using the same macros, but different order
-        final URL url1 = new URL("file:/some/path/xx.bob?X=Fred+Harvey%20Newman&Y=2&Z=1");
-        final URL url2 = new URL("file:/some/path/xx.bob?Z=1&X=Fred+Harvey%20Newman&Y=2");
+        // URIs using the same macros, but different order
+        final URI url1 = new URI("file:/some/path/xx.bob?X=Fred+Harvey%20Newman&Y=2&Z=1");
+        final URI url2 = new URI("file:/some/path/xx.bob?Z=1&X=Fred+Harvey%20Newman&Y=2");
 
         // Should result in equal DisplayInfos
-        DisplayInfo info1 = DisplayInfo.forURL(url1);
-        DisplayInfo info2 = DisplayInfo.forURL(url2);
+        DisplayInfo info1 = DisplayInfo.forURI(url1);
+        DisplayInfo info2 = DisplayInfo.forURI(url2);
         System.out.println(info1);
         System.out.println(info2);
         assertThat(info1, equalTo(info2));
         assertThat(info1, not(sameInstance(info2)));
 
-        // When turned back into a URL, they use the alphabetical ordered macros
+        // When turned back into a URI, they use the alphabetical ordered macros
         // (like url1, but with '+' for spaces)
-        assertThat(info1.toURL().toString(), equalTo(info2.toURL().toString()));
-        assertThat(info2.toURL().toString(), equalTo("file:/some/path/xx.bob?X=Fred+Harvey+Newman&Y=2&Z=1"));
+        assertThat(info1.toURI().toString(), equalTo(info2.toURI().toString()));
+        assertThat(info2.toURI().toString(), equalTo("file:/some/path/xx.bob?X=Fred+Harvey+Newman&Y=2&Z=1"));
     }
 }
